--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<a class="nav-link" href="#">Madlibs</a>
 		  </li>
 			<li class="nav-item">
-			<a class="nav-link" href="#">Avatar Creator</a>
+			<a class="nav-link" href="/avatarCreator/index.html">Avatar Creator</a>
 		  </li>
 			
 			<!--more li for additional links-->
